tests/rascal/negative/type_errors/L1/17_expression_ES10_D4_6.ob
MODULE Test17;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               y := ((((1 MOD y) + (y + 0)) * (+ (1 + x))) + ((+ (y - 2)) MOD ((+ 1223) * (+ 1223))));
               p := ((+ ((x - 1223) DIV (x DIV x))) <= (((1 MOD 1) MOD (1 + 2)) - (- (+ 1))));
               z := (+ (+ ((2 * 1223) + (x DIV 1223))));
               z := ((+ ((200 MOD 0) + (1 + 200))) * (((x MOD 0) DIV (- 1223)) * ((2 MOD 1223) + (+ 0))));
               p := ((- ((- y) * (+ y))) > ((+ (+ 1223)) MOD ((y DIV 200) DIV (1 + 200))));
               x := ((((1223 * y) DIV (+ z)) - ((+ 200) - (0 MOD z))) DIV (((y * z) * (2 - x)) * ((200 - 200) MOD (1 - 0))));
  (* error *)  p := ((((+ r) MOD (+ y)) <= (- (+ y))) OR ((- (+ 1)) > ((+ x) * (1 + 1223))));
               q := ((+ ((- 0) DIV (z + 200))) = (((+ 2) + (y - 0)) - ((0 * 1223) MOD (1223 * x))));
               r := ((((200 + 1223) DIV (0 * 1223)) + ((1223 + y) * (2 * y))) < ((+ (2 MOD x)) DIV ((z + 1223) * (- 1223))));
               y := (- (((+ 200) + (200 * 200)) DIV (+ (200 + 1))))
END Test17.